--- a/clash-list.ini
+++ b/clash-list.ini
@@ -14,14 +14,14 @@ ruleset=➡️ 国内,[]FINAL
 ;引用来源：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👽 AI`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]其他`[]REJECT
-
+custom_proxy_group=👽 AI`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]其他`[]REJECT
+[]大王`
 ;3、节点组
 custom_proxy_group=所有`url-test`.*`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=港台日新韩`url-test`(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|🇯🇵|Japan|新加坡|SG|🇸🇬|Singapore|韩国|KR|🇰🇷|Korea)`http://www.gstatic.com/generate_204`60,150
