--- a/clash-list.ini
+++ b/clash-list.ini
@@ -14,7 +14,7 @@ ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ;ruleset=🌍 国外,[]FINAL
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/proxy.list
-ruleset=➡️ 国内,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/direct.list
+;ruleset=➡️ 国内,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/direct.list
 ruleset=➡️ 国内,[]FINAL
 ;引用来源：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
 
