--- a/clash-list.ini
+++ b/clash-list.ini
@@ -40,6 +40,7 @@ custom_proxy_group=美国`url-test`(美国|US|🇺🇸|United States)`http://www
 custom_proxy_group=CF`url-test`(CF随机节点)`http://www.gstatic.com/generate_204`100,180
 custom_proxy_group=大王`url-test`(DaWang)`http://www.gstatic.com/generate_204`100,180
 custom_proxy_group=牛逼`url-test`^(?!.*DaWang|CF随机节点|测试)`http://www.gstatic.com/generate_204`100,180
+custom_proxy_group=一元`url-test`(专线)`http://www.gstatic.com/generate_204`100,180
 custom_proxy_group=其他`url-test`(柬埔|斯坦|尼泊|也纳|克兰|比利时|尔兰|立陶宛|冰岛|秘鲁|耳其|利亚|埃及|希腊|斯洛伐克|孟加|芬兰|阿联|英国|德国|南非|意大|法国|加拿|墨西|印度|越南|罗斯|瑞士|瑞典|智利|荷兰|比亚|巴西|沙特|班牙|泰国|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`100,180
 
 ;4、启用规则集
