--- a/clash-list.ini
+++ b/clash-list.ini
@@ -1,5 +1,4 @@
 ;1、域名组
-ruleset=➡️ 国内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
 ruleset=👽 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=👽 AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
@@ -12,6 +11,7 @@ ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ;ruleset=➡️ 国内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
 ;ruleset=🌍 国外,[]FINAL
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/proxy.list
 ;ruleset=➡️ 国内,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/direct.list
