--- a/clash-list.ini
+++ b/clash-list.ini
@@ -11,7 +11,7 @@ ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ;ruleset=➡️ 国内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
 ;ruleset=🌍 国外,[]FINAL
-ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=➡️ 国内,[]GEOIP,CN
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/proxy.list
 ;ruleset=➡️ 国内,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/direct.list
