--- a/sub-store-clash.yaml
+++ b/sub-store-clash.yaml
@@ -1,7 +1,7 @@
 # url 里填写自己的订阅,名称不能重复
 proxy-providers:
   ProviderAirPort:
-    url: "http://192.168.18.101:3001/CKg2abstVnOeRpm1aB4G/download/collection/%E7%BD%91%E7%BB%9C%E6%94%B6%E9%9B%86?target=Clash"
+    url: "你的订阅地址"
     type: http
     interval: 86400
     health-check:
