--- a/clash-list.ini
+++ b/clash-list.ini
@@ -20,18 +20,18 @@ ruleset=➡️ 国内,[]FINAL
 ;引用来源：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👽 AI`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有`[]港台日新韩`[]台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=👽 AI`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有`[]港台日新韩`[]无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]CF`[]大王`[]牛逼`[]其他`[]REJECT
 
 ;3、节点组
 custom_proxy_group=所有`url-test`.*`http://www.gstatic.com/generate_204`100,180
 custom_proxy_group=港台日新韩`url-test`^(?!.*测试).*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|🇯🇵|Japan|新加坡|SG|🇸🇬|Singapore|韩国|KR|🇰🇷|Korea).*`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=台日新韩`url-test`(台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|🇯🇵|Japan|新加坡|SG|🇸🇬|Singapore|韩国|KR|🇰🇷|Korea)`http://www.gstatic.com/generate_204`300,5,100
+custom_proxy_group=无港`url-test`^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong))`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=香港`url-test`^(?!.*测试).*(香港|HK|Hong Kong|🇭🇰|HongKong|CF).*`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=台湾`url-test`(台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=日本`url-test`(日本|JP|🇯🇵|Japan)`http://www.gstatic.com/generate_204`300,5,100
