--- a/clash-list.ini
+++ b/clash-list.ini
@@ -12,36 +12,38 @@ ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ;ruleset=➡️ 国内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
-;ruleset=🌍 国外,[]FINAL
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/proxy.list
 ;ruleset=➡️ 国内,https://raw.githubusercontent.com/LFBiao/ilist/refs/heads/main/direct.list
+;ruleset=🌍 国外,[]FINAL
 ruleset=➡️ 国内,[]FINAL
 ;引用来源：https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👽 AI`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
-custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]港台日新韩`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]牛逼`[]其他`[]REJECT
+custom_proxy_group=👽 AI`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
+custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
+custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
+custom_proxy_group=➡️ 国内`select`[]DIRECT`[]所有`[]CF和大王`[]CF和大王无港`[]香港`[]台湾`[]日本`[]新加坡`[]韩国`[]美国`[]其他`[]REJECT
 
 ;3、节点组
 custom_proxy_group=所有`url-test`.*`http://www.gstatic.com/generate_204`100,180
-custom_proxy_group=港台日新韩`url-test`^(?!.*测试).*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|🇯🇵|Japan|新加坡|SG|🇸🇬|Singapore|韩国|KR|🇰🇷|Korea).*`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=CF和大王无港`url-test`^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong)).*(CF|DaWang)`http://www.gstatic.com/generate_204`300,5,100
+custom_proxy_group=CF和大王`url-test`(CF|大王)`http://www.gstatic.com/generate_204`300,5,100
+custom_proxy_group=CF和大王无港`url-test`^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong)).*(CF|大王)`http://www.gstatic.com/generate_204`300,5,100
+;custom_proxy_group=CF和大王`url-test`(CF|大王)`http://www.gstatic.com/generate_204`300,5,100;
+;custom_proxy_group=港台日新韩`url-test`^(?!.*测试).*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|🇯🇵|Japan|新加坡|SG|🇸🇬|Singapore|韩国|KR|🇰🇷|Korea).*`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=香港`url-test`^(?!.*测试).*(香港|HK|Hong Kong|🇭🇰|HongKong|CF).*`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=台湾`url-test`(台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=日本`url-test`(日本|JP|🇯🇵|Japan)`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=新加坡`url-test`(新加坡|SG|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=韩国`url-test`(韩国|KR|🇰🇷|Korea)`http://www.gstatic.com/generate_204`300,5,100
 custom_proxy_group=美国`url-test`(美国|US|🇺🇸|United States)`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=CF和大王`url-test`(CF|DaWang)`http://www.gstatic.com/generate_204`300,5,100
 ;custom_proxy_group=大王`url-test`(DaWang)`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=牛逼`url-test`^(?!.*(DaWang|CF|测试|专线)).*`http://www.gstatic.com/generate_204`300,5,100
-custom_proxy_group=其他`url-test`(柬埔|斯坦|尼泊|也纳|克兰|比利时|尔兰|立陶宛|冰岛|秘鲁|耳其|利亚|埃及|希腊|斯洛伐克|孟加|芬兰|阿联|英国|德国|南非|意大|法国|加拿|墨西|印度|越南|罗斯|瑞士|瑞典|智利|荷兰|比亚|巴西|沙特|班牙|泰国|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`100,180
+;custom_proxy_group=牛逼`url-test`^(?!.*(DaWang|CF|测试|专线)).*`http://www.gstatic.com/generate_204`300,5,100
+custom_proxy_group=其他`url-test`^(?!.*(大王|CF)).*`http://www.gstatic.com/generate_204`300,5,100
+;custom_proxy_group=其他`url-test`(柬埔|斯坦|尼泊|也纳|克兰|比利时|尔兰|立陶宛|冰岛|秘鲁|耳其|利亚|埃及|希腊|斯洛伐克|孟加|芬兰|阿联|英国|德国|南非|意大|法国|加拿|墨西|印度|越南|罗斯|瑞士|瑞典|智利|荷兰|比亚|巴西|沙特|班牙|泰国|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`100,180
 
 ;4、启用规则集
 enable_rule_generator=true
