--- a/qiciyu-ALL-Clash.yaml
+++ b/qiciyu-ALL-Clash.yaml
@@ -51,15 +51,15 @@ proxy-providers:
       interval: 300
     proxy: 直连
 
-  Free:
-    url: "http://192.168.18.100:3001/CKg2abstVnOeRpm1aB4G/download/collection/%E5%85%8D%E8%B4%B9%E8%81%9A%E5%90%88?target=Clash"
-    type: http
-    interval: 86400
-    health-check:
-      enable: true
-      url: https://www.gstatic.com/generate_204
-      interval: 300
-    proxy: 直连
+#  Free:
+#    url: "http://192.168.18.100:3001/CKg2abstVnOeRpm1aB4G/download/collection/%E5%85%8D%E8%B4%B9%E8%81%9A%E5%90%88?target=Clash"
+#    type: http
+#    interval: 86400
+#    health-check:
+#      enable: true
+#      url: https://www.gstatic.com/generate_204
+#      interval: 300
+#    proxy: 直连
 
   MaoEr:
     url: "http://192.168.18.100:3001/CKg2abstVnOeRpm1aB4G/download/MaoEr?target=Clash"
@@ -168,15 +168,15 @@ proxy-groups:
   - {name: 🍎 Apple, type: select, proxies: [直连, 🚀 默认代理]}
   - {name: 🎯 直连, type: select, proxies: [直连, 🚀 默认代理]}
   - {name: 🐟 漏网之鱼, <<: *pr}
-  - {name: ♻️ 香港自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^(?!.*(台|日|韩|新|深|美)).*$"}
-  - {name: ♻️ 香港不动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "^(?!.*(港|HK|(?i)Hong)|直连).*$"}
-  - {name: ♻️ 台湾自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(台|TW|(?i)Taiwan))^(?!.*(港|韩|新|美)).*$"}
-  - {name: ♻️ 日本自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^(?!.*(港|台|韩|新|美)).*$"}
-  - {name: ♻️ 美国自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(美|US|CF|(?i)States|America))^(?!.*(港|台|日|韩|新)).*$"}
-  - {name: ♻️ 优质自动, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(20倍|大王|DaWang|猫耳)).*$"}
-  - {name: ♻️ 备选自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(一元|NB)).*$"}
-  - {name: ♻️ 免费自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(免费|CF|优选)).*$"}
-  - {name: ♻️ 全部自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "^(?!.*(直连)).*$"}
+  - {name: ♻️ 香港自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^(?!.*(台|日|韩|新|深|美)).*$"}
+  - {name: ♻️ 香港不动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "^(?!.*(港|HK|(?i)Hong)|直连).*$"}
+  - {name: ♻️ 台湾自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(台|TW|(?i)Taiwan))^(?!.*(港|韩|新|美)).*$"}
+  - {name: ♻️ 日本自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^(?!.*(港|台|韩|新|美)).*$"}
+  - {name: ♻️ 美国自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(美|US|CF|(?i)States|America))^(?!.*(港|台|日|韩|新)).*$"}
+  - {name: ♻️ 优质自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(20倍|大王|DaWang|猫耳)).*$"}
+  - {name: ♻️ 备选自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(一元|NB)).*$"}
+  - {name: ♻️ 免费自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "(?=.*(免费|CF|优选)).*$"}
+  - {name: ♻️ 全部自动, type: url-test, include-all: true, tolerance: 50, interval: 300, filter: "^(?!.*(直连)).*$"}
   - {name: 🌐 全部节点, type: select, include-all: true}
 
 # 规则匹配
