--- a/angeshijie-clash-all-mihomo.yaml
+++ b/angeshijie-clash-all-mihomo.yaml
@@ -15,15 +15,15 @@ proxy-providers:
       interval: 300
     proxy: 直连
 
-#  YiYuan:
-#    url: "http://192.168.18.100:3008/T3B9dgzBzdRbBF8Aqx7P/download/yiyuan?target=ClashMeta"
-#    type: http
-#    interval: 86400
-#    health-check:
-#      enable: true
-#      url: https://www.gstatic.com/generate_204
-#      interval: 300
-#    proxy: 直连
+  YiYuan:
+    url: "http://192.168.18.100:3008/T3B9dgzBzdRbBF8Aqx7P/download/yiyuan?target=ClashMeta"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
 
   CF:
     url: "http://192.168.18.100:3008/T3B9dgzBzdRbBF8Aqx7P/download/CF?target=ClashMeta"
