--- a/angeshijie-clash-all-mihomo.yaml
+++ b/angeshijie-clash-all-mihomo.yaml
@@ -178,7 +178,7 @@ rules:
   - DOMAIN-SUFFIX,ankiweb.net,♻️ 香港自动
   - DOMAIN-SUFFIX,idsduf.com,🚀 默认代理
   - RULE-SET,pingbi / Domain,REJECT
-  - RULE-SET,anti-AD / Domain,REJECT
+#  - RULE-SET,anti-AD / Domain,REJECT
   - RULE-SET,ChatGPT / Domain,ChatGPT
   - RULE-SET,Claude / Domain,Claude
   - RULE-SET,Meta AI / Domain,Meta AI
